##Text encoding: utf-8

2006-08-15 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* configure.ac: Escaped squared brackets. Fixed the AC_ARG_ENABLE and
	AC_ARG_WITH macro usage. Some $foodir variables need be be processed
	twice with eval or we will observe a bug. Some cosmetic improvements.
	Small changes for the way we detect the fd.o helper utils and ask the
	question, if they should run after installation.
	* Makefile.am: Ditto. Implemented the changes if the fd.o helper utils
	should run after installation.

2006-08-15 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* docs/man/gchem3d-viewer.1.xml: Added Jean as program author to
	AUTHORs section.
	* docs/man/gchemcalc.1.xml: Ditto.
	* docs/man/gchemtable.1.xml: Ditto.
	* docs/man/libgcu.3.xml: Ditto.
	* docs/man/gchem3d-viewer.1: Updated from source.
	* docs/man/gchemcalc.1: Ditto.
	* docs/man/gchemtable.1: Ditto.
	* docs/man/libgcu.3: Ditto.
	* docs/man/Makefile.am (XSLTPROC_FLAGS): Added man.charmap.use.subset
	parameter to allow the correctly formatted output of Jeans surname :).

2006-08-15 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* docs/man/gchem3d-viewer.1.xml: One small adjustment, so the option
	description is equal to gchemcalc.1.
	* docs/man/libgcu.3.xml: Another small adjustment to the description.
	* docs/man/gchem3d-viewer.1: Updated from source.
	* docs/man/libgcu.3: Ditto.

2006-08-15 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* docs/man/gchem3d-viewer.1.xml: Fixed a bug in the -d|--display3d
	option description. Added cross-references for the GTK and GNOME
	options. Some XML clean-up.
	* docs/man/gchemcalc.1.xml: Ditto.
	* docs/man/gchemtable.1.xml: Ditto.
	* docs/man/libgcu.3.xml: Ditto.
	* docs/man/gchem3d-viewer.1: Updated from source.
	* docs/man/gchemcalc.1: Ditto.
	* docs/man/gchemtable.1: Ditto.

2006-07-28  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/man/gchem3d-viewer.1.xml: Fixed Header.
	(OPTIONS): Cosmetic changes. More general description of the --help-*
	option(s).